--- a/html/en/SCMHELP01.html
+++ b/html/en/SCMHELP01.html
@@ -8,14 +8,15 @@
 </head>
 <body>
 <script src="../../js/partial/header.js"></script>
-
-<p><br>Contents:<br><br>
-<a href="gta_ini.html">Opcodes list (ini)</a><br>
-&nbsp;<br>
-<a href="scmhelpgtalimit.html">GTA Limits</a><br><br>
-<a href="scmhelp02.html">GTA SA</a><br><br>
-<a href="scmhelp03.html">GTA VC</a><br><br>
-<a href="scmhelp04.html">GTA LCS </a></p>
-<p>Help materials by:<br>
+<p>
+Contents:
+<ul>
+<li><a href="gta_ini.html">Opcodes list (ini)</a></li>
+<li><a href="scmhelpgtalimit.html">GTA Limits</a></li>
+<li><a href="scmhelp02.html">GTA SA</a></li>
+<li><a href="scmhelp03.html">GTA VC</a></li>
+<li><a href="scmhelp04.html">GTA LCS</a></li>
+</ul>
+Help materials by:<br>
 alexander aka alexander koryakin, barton waterduck, bigun, deezire, opius, pdescobar, san'ok aka alexander golovnev, seemann, spaceeinstein, spinnie, xieon, wesser, <a href="http://www.lzfdownloads.de/index.php?page=46&action=text#1" target="_blank">http://www.lzfdownloads.de/</a></p>
 <script src="../../js/partial/footer.js"></script>
