--- a/html/en/SCMHELP04.html
+++ b/html/en/SCMHELP04.html
@@ -4,7 +4,7 @@
   <title>SCM Documentation: GTA LCS</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" type="text/css" href="style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 <script src="../../js/partial/header.js"></script>
