--- a/html/en/SCMHELPGTASA10.htm
+++ b/html/en/SCMHELPGTASA10.htm
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title>Sanny Builder Help: GTA SA Special actors</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head><body>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../../js/partial/header.js"></script>
+<p>
 
 <h2>GTA SA / Special actors</h2>
 <table>
