--- a/html/en/Cleo.htm
+++ b/html/en/Cleo.htm
@@ -1,41 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>CLEO 3 Code Library</TITLE>
-<link rel="stylesheet" type="text/css" href="style/style.css">
-<META http-equiv=Content-Type content="text/html; charset=windows-1251"></HEAD>
-<BODY topMargin=0 >
-<TABLE
-style="BORDER-RIGHT: medium none; BORDER-TOP: medium none; BORDER-LEFT: medium none; BORDER-BOTTOM: #c0c0c0 1px solid"
-height=121 cellSpacing=0 cellPadding=0 width=640>
-  <TBODY>
-  <TR>
-    <TD vAlign=top><IMG
-      src="img/en/logo2.jpg" width="640" height="121" border=0 class="conthdr" ></TD>
-</TR></TBODY></TABLE>
-<TABLE cellSpacing=0 cellPadding=0 width=640 border=0>
-  <TBODY>
-
-  <TD width="100%" height="100%" vAlign=top>
-   <DIV><IMG
-      src="img/en/old/CLEO/articles.png" width="640" height="33"></DIV>
-
-
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=3><IMG height=36
-            src="img/en/mtdl.png" width=5></TD>
-          <TD width="571" height=36 vAlign=top
-          background="mtdbg.png" class=ntitle>CLEO 3 Code Library </TD>
-          <TD width=18><IMG height=36
-            src="img/en/mtdr.png"
-      width=20></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5 background="ltd.gif"></TD>
-          <TD vAlign=top class=news>
+  <title>CLEO 3 Code Library</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../../js/partial/header.js"></script>
 
 <div class=gomer>CLEO 3 </div>
 
