--- a/html/en/Cleo_OP.htm
+++ b/html/en/Cleo_OP.htm
@@ -1,42 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>CLEO 3: opcodes</TITLE>
-<link rel="stylesheet" type="text/css" href="style/style.css">
-<META http-equiv=Content-Type content="text/html; charset=windows-1251">
-</HEAD>
-<BODY topMargin=0 >
-<TABLE
-style="BORDER-RIGHT: medium none; BORDER-TOP: medium none; BORDER-LEFT: medium none; BORDER-BOTTOM: #c0c0c0 1px solid"
-height=121 cellSpacing=0 cellPadding=0 width=640>
-  <TBODY>
-  <TR>
-    <TD vAlign=top><IMG
-      src="img/en/logo2.jpg" width="640" height="121" border=0 class="conthdr" ></TD>
-</TR></TBODY></TABLE>
-<TABLE cellSpacing=0 cellPadding=0 width=640 border=0>
-  <TBODY>
-
-  <TD width="100%" height="100%" vAlign=top>
-   <DIV><IMG
-      src="img/en/old/CLEO/articles.png" width="640" height="33"></DIV>
-
-
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=3><IMG height=36
-            src="img/en/mtdl.png" width=5></TD>
-          <TD width="571" height=36 vAlign=top
-          background="mtdbg.png" class=ntitle><p>CLEO 3: opcodes </p></TD>
-      <TD width=18><IMG height=36
-            src="img/en/mtdr.png"
-      width=20></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="640">
-        <TBODY>
-        <TR>
-          <TD width=5 background="ltd.gif"></TD>
-          <TD width="600" vAlign=top class=news><p>The using of the  following opcodes is only possible at the CLEO 3 library installed. At  compiling Sanny Builder checks if the library is installed and if not, warns  that it’s necessary. If you write a script using these opcodes, you have to  include the library files as well to guarantee its functionality to the end  user</p>
+  <title>CLEO 3: opcodes</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../../js/partial/header.js"></script>
+<p>
+The using of the  following opcodes is only possible at the CLEO 3 library installed. At  compiling Sanny Builder checks if the library is installed and if not, warns  that it’s necessary. If you write a script using these opcodes, you have to  include the library files as well to guarantee its functionality to the end  user</p>
             <table width="490" align="center" cellpadding="0" cellspacing="0" class="link">
               <tr>
                 <td width="120"><a href="#0A8C" title="0A8C: write_memory 0xC0BC15 size 1 value 1 virtual_protect 0">Opcode 0A8C</a></td>
