--- a/html/en/SCMHELPGTASA3_1.htm
+++ b/html/en/SCMHELPGTASA3_1.htm
@@ -1,43 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>GTA SA Clothes: LEGS</TITLE>
-<link rel="stylesheet" type="text/css" href="style/style.css">
-<META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <title>GTA SA Clothes: LEGS</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../../js/partial/header.js"></script>
+<p>
 
-</HEAD>
-<BODY topMargin=0 >
-<TABLE
-style="BORDER-RIGHT: medium none; BORDER-TOP: medium none; BORDER-LEFT: medium none; BORDER-BOTTOM: #c0c0c0 1px solid"
-height=121 cellSpacing=0 cellPadding=0 width=640>
-  <TBODY>
-  <TR>
-    <TD vAlign=top width="100%"><IMG
-      src="img/en/logo2.jpg" width="640" height="121" border=0 class="conthdr" ></TD>
-  </TR></TBODY></TABLE>
-<TABLE cellSpacing=0 cellPadding=0 width=640 border=0>
-  <TBODY>
-
-  <TD width="100%" height="100%" vAlign=top>
-   <DIV><IMG
-      src="img/en/old/SCM/articles.png" width="640" height="33"></DIV>
-
-
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=36
-            src="img/en/mtdl.png" width=5></TD>
-          <TD class=ntitle vAlign=top
-          background="mtdbg.png" height=36>Sanny Builder Help: GTA SA  Clothes: LEGS</TD>
-          <TD width=5><IMG height=36
-            src="img/en/mtdr.png"
-      width=20></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5 background="ltd.gif"></TD>
-          <TD class=news vAlign=top><br>
 		  <div class="mycode5"><span class="general1-class">Player</span>.<span class="general1-command">SetClothes</span>(<span class="general1-variable">$PLAYER_CHAR</span>, <span class="general1-string">"TEXTURE", "MODEL"</span>, <span class="general1-number">BODY_PART</span>)<br>
             <span class="general1-class">Player</span>.<span class="general1-command">Build</span>(<span class="general1-variable">$PLAYER_CHAR</span>)</div>
 <p>Also, see  (<a href="SCMHELPGTASA8.htm">BODY PART</a>).</p>
