--- a/html/en/SCMHELPGTASA7.htm
+++ b/html/en/SCMHELPGTASA7.htm
@@ -1,41 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>GTA SA PedTypes</TITLE>
-<link rel="stylesheet" type="text/css" href="style/style.css">
-</HEAD>
-<BODY topMargin=0 >
-<TABLE
-style="BORDER-RIGHT: medium none; BORDER-TOP: medium none; BORDER-LEFT: medium none; BORDER-BOTTOM: #c0c0c0 1px solid"
-height=121 cellSpacing=0 cellPadding=0 width=640>
-  <TBODY>
-  <TR>
-    <TD vAlign=top width="100%"><IMG
-      src="img/en/logo2.jpg" width="640" height="121" border=0 class="conthdr" ></TD>
-  </TR></TBODY></TABLE>
-<TABLE cellSpacing=0 cellPadding=0 width=640 border=0>
-  <TBODY>
-
-  <TD width="100%" height="100%" vAlign=top>
-   <DIV><IMG
-      src="img/en/old/SCM/articles.png" width="640" height="33"></DIV>
-
-
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=36
-            src="img/en/mtdl.png" width=5></TD>
-          <TD class=ntitle vAlign=top
-          background="mtdbg.png" height=36>Sanny Builder Help: GTA SA   PedTypes</TD>
-          <TD width=5><IMG height=36
-            src="img/en/mtdr.png"
-      width=20></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5 background="ltd.gif"></TD>
-          <TD class=news vAlign=top><p>              Here is available pedtypes, using in </p>
+  <title>GTA SA PedTypes</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../../js/partial/header.js"></script>
+<p>
+              Here is available pedtypes, using in </p>
             <div class="mycode5">009A: <span class="general1-variable">$Actor</span> = create_actor <span class="general1-number">INT(pedtype)</span> <span class="general1-model">#MODEL</span> at <span class="general1-number">X Y Z </span></div>
             <br>
 			<table align="center" cellpadding="0" cellspacing="0">
