--- a/html/en/coding.htm
+++ b/html/en/coding.htm
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Coding</title>
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<link rel="stylesheet" type="text/css" href="style/style2.css">
+  <title>Coding</title></title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
+<script src="../../js/partial/header.js"></script>
+<p>
+
 <h2>Coding</h2>
 <ul class='l1'>
 <li><a href="data_types.htm">Data types</a></li>
