--- a/html/en/SCMHELPGTALCS1.htm
+++ b/html/en/SCMHELPGTALCS1.htm
@@ -4,11 +4,12 @@
   <title>GTA LCS model IDs</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" type="text/css" href="style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 <script src="../../js/partial/header.js"></script>
-<p><table align="center" cellpadding="0" cellspacing="0">
+<p>
+<table align="center" cellpadding="0" cellspacing="0">
               <tr class="text">
                 <td width="91" valign="top" class="kays5">Model ID </td>
                 <td width="204" valign="top" class="kays">Model Name </td>
