--- a/html/en/About.html
+++ b/html/en/About.html
@@ -1,12 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Sanny Builder</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Sanny Builder</title></title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
+<script src="../../js/partial/header.js"></script>
+<p>
+
 
 <h2>Sanny Builder</h2>
 <p>Sanny Builder is a fast and powerful tool designed for the GTA 3D game series (GTA3, VC, SA; partially LCS and VCS).</p>
