run * js/partial/header.js

--- a/en/html/Cleo_OP.html
+++ b/en/html/Cleo_OP.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 The using of the  following opcodes is only possible at the CLEO 3 library installed. At  compiling Sanny Builder checks if the library is installed and if not, warns  that it’s necessary. If you write a script using these opcodes, you have to  include the library files as well to guarantee its functionality to the end  user</p>
             <table width="490" align="center" cellpadding="0" cellspacing="0" class="link">
