--- a/en/html/GTAVCS3.html
+++ b/en/html/GTAVCS3.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 
 			<div class="mycode5">0109: set_weather <span class="general1-number">7</span></div>
