--- a/en/html/O_100.html
+++ b/en/html/O_100.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>Options</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
+<script src="../js/partial/header.js"></script>
+<p>
 
 <h2>Options</h2>
 <p>The options window is shown when you press <span class="kbd">F10</span>. This window is divided into five pages, each of them contains certain kind of settings. By default <a href="O_101.htm">the general settings</a> page is open.</p>
