--- a/en/html/O_103.html
+++ b/en/html/O_103.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title>Editor</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head><body>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../js/partial/header.js"></script>
+<p>
 
 <h2>Editor</h2>
 <p>Here you can change the IDE settings.</p>
