--- a/en/html/SCMHELPGTASA.html
+++ b/en/html/SCMHELPGTASA.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 
 <div class="mycode5">0506: set_vehicle_model <span class="general1-model">#PONY</span> next_variation <span class="general1-number">0 0</span></div>
