--- a/en/html/SCMHELPGTASA1.html
+++ b/en/html/SCMHELPGTASA1.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 
 <div class="mycode5"><span class="general1-class">Garage</span>.<span class="general1-command">Activate</span>(<span class="general1-string">'BODLAWN'</span>)</div>
