--- a/en/html/SCMHELPGTASA12.html
+++ b/en/html/SCMHELPGTASA12.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 
 		  <div class="mycode5"><span class="general1-class">Player</span>.<span class="general1-command">SetClothes</span>(<span class="general1-variable">$PLAYER_CHAR</span>, <span class="general1-string">"TEXTURE", "MODEL"</span>, <span class="general1-number">BODY_PART</span>)<br>
