--- a/en/html/SCMHELPGTAVC3.html
+++ b/en/html/SCMHELPGTAVC3.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 My tested key_press numbers in Vice. Returned by </p>
             <div class="mycode5">00E1: key_pressed <span class="general1-number">0</span>? &lt;number tested&gt;? </div>
