--- a/en/html/coding.html
+++ b/en/html/coding.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Coding</title></title>
+  <title>Coding</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 
 <h2>Coding</h2>
