--- a/en/html/edit_modes.html
+++ b/en/html/edit_modes.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>Edit Modes</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-
+<script src="../js/partial/header.js"></script>
+<p>
 <h2>Edit Modes</h2>
 <p>An edit mode is a set of options determining behaviour of Sanny Builder when working with scripts of a particular game. Fact is, there is no game in the GTA series with the script format same to the others. So, each game requires special settings while editing scripts. That's the reason why the edit modes are introduced in Sanny Builder.</p>
 
