--- a/en/html/features.html
+++ b/en/html/features.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>Features</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-
+<script src="../js/partial/header.js"></script>
+<p>
 <h2>Features</h2>
 <p>Sanny Builder grants the end-user the following possibilities:</p>
 
