--- a/en/html/hex_end.html
+++ b/en/html/hex_end.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>HEX..END</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head><body>
-
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../js/partial/header.js"></script>
+<p>
 <h2>HEX..END</h2>
 <p>Sanny Builder supports writing a raw content in an output file. All values within this construct are written in an output file without any checks.</p>
 <p class='note'>Use this feature only if you know what you're doing. Any mistakes will corrupt the script file making it unreadable by the game or a script editor.</p>
