--- a/en/html/hotkeys.html
+++ b/en/html/hotkeys.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>Hotkeys</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-
+<script src="../js/partial/header.js"></script>
+<p>
 <h2>Hotkeys</h2>
 
 <p>Sanny Builder supports standard keyboard shortcuts for the file and text operations (Ctrl+N, Ctrl+Z, etc). In addition there are specific hotkeys to use in work with scripts. Some of them are customizable <a href="O_105.htm">in the options</a></p>
