--- a/en/html/loops.html
+++ b/en/html/loops.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title>Loops</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head><body>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../js/partial/header.js"></script>
+<p>
 
 <h2>Loops</h2>
 <p>A loop is a statement which allows code to be repeatedly executed. Sanny Builder supports three kinds of controls loops: <a href="#REPEAT..UNTIL">repeat</a>, <a href="#WHILE..END">while</a>, <a href="#FOR..END">for</a>.</p>
