--- a/en/html/SCMHELP02.html
+++ b/en/html/SCMHELP02.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 Contents:
 <ul>
