--- a/en/html/SCMHELPGTALCS2.html
+++ b/en/html/SCMHELPGTALCS2.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
  <div class="mycode5">0357: set_actor <span class="general1-variable">$PLAYER_ACTOR</span> skin_to <span class="general1-string">'PLR3'</span></div>
  <br>
