--- a/en/html/SCMHELPGTALCS3.html
+++ b/en/html/SCMHELPGTALCS3.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
  <div class="mycode5">0241: load_special_actor <span class="general1-number">1</span> <span class="general1-string">'PLR6'</span></div>
  <br>
