--- a/en/html/SCMHELPGTALCS5.html
+++ b/en/html/SCMHELPGTALCS5.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
  <div class="mycode5">01BB: set_weather <span class="general1-number">1</span></div>
  <br>
