--- a/en/html/SCMHELPGTALimit.html
+++ b/en/html/SCMHELPGTALimit.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 <table width="571" align="center" class=main>
 <tr>
