--- a/en/html/SCMHELPGTASA8.html
+++ b/en/html/SCMHELPGTASA8.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 
 		  <div class="mycode5">		  087B: set_player <span class="general1-variable">$PLAYER_CHAR</span> texture <span class="general1-string">"VEST"</span> model <span class="general1-string">"VEST"</span> body_part <span class="general1-number">0</span><br>
