--- a/en/html/SCMHELPGTAVC6.html
+++ b/en/html/SCMHELPGTAVC6.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../../js/partial/header.js"></script>
+<script src="../js/partial/header.js"></script>
 <p>
 <table align="center" cellpadding="0" cellspacing="0">
             <tr>
