--- a/en/html/conditions.html
+++ b/en/html/conditions.html
@@ -1,42 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Conditions</TITLE>
-<link rel="stylesheet" type="text/css" href="style/style.css">
-<script language="javascript" type="text/javascript" src="img/en/clipboard.js"></script>
-</HEAD>
-<BODY topMargin=0 >
-<TABLE
-style="BORDER-RIGHT: medium none; BORDER-TOP: medium none; BORDER-LEFT: medium none; BORDER-BOTTOM: #c0c0c0 1px solid"
-height=121 cellSpacing=0 cellPadding=0 width=640>
-  <TBODY>
-  <TR>
-    <TD vAlign=top width="100%"><IMG
-      src="img/en/logo2.jpg" width="640" height="121" border=0 class="conthdr" ></TD>
-  </TR></TBODY></TABLE>
-<TABLE cellSpacing=0 cellPadding=0 width=640 border=0>
-  <TBODY>
-
-  <TD width="100%" height="100%" vAlign=top>
-   <DIV><IMG
-      src="img/en/old/coding/articles.png" width="640" height="33"></DIV>
-
-
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=36
-            src="img/en/mtdl.png" width=5></TD>
-          <TD class=ntitle vAlign=top
-          background="mtdbg.png" height=36>Conditions</TD>
-          <TD width=5><IMG height=36
-            src="img/en/mtdr.png"
-      width=20></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5 background="ltd.gif"></TD>
-          <TD class=news vAlign=top><p>
+  <title>Conditions</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../js/partial/header.js"></script>
+<p>
 
 There is the operator IF to evaluate the condition.
 
