--- a/en/html/console.html
+++ b/en/html/console.html
@@ -1,48 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Console</TITLE>
-<link rel="stylesheet" type="text/css" href="style/style.css">
-<META http-equiv=Content-Type content="text/html; charset=windows-1251">
-<style type="text/css">
-<!--
-.style3 {font-family: Verdana, sans-serif; font-size: 10px; }
-.style6 {font-size: 10px}
--->
-</style>
-</HEAD>
-<BODY topMargin=0 >
-<TABLE
-style="BORDER-RIGHT: medium none; BORDER-TOP: medium none; BORDER-LEFT: medium none; BORDER-BOTTOM: #c0c0c0 1px solid"
-height=121 cellSpacing=0 cellPadding=0 width=640>
-  <TBODY>
-  <TR>
-    <TD vAlign=top width="100%"><IMG
-      src="img/en/logo2.jpg" width="640" height="121" border=0 class="conthdr" ></TD>
-  </TR></TBODY></TABLE>
-<TABLE cellSpacing=0 cellPadding=0 width=640 border=0>
-  <TBODY>
-
-  <TD width="100%" height="100%" vAlign=top>
-   <DIV><IMG
-      src="img/en/old/redaktor/articles.png" width="640" height="33"></DIV>
-
-
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=36
-            src="img/en/mtdl.png" width=5></TD>
-          <TD class=ntitle vAlign=top
-          background="mtdbg.png" height=36>&nbsp;  Console</TD>
-          <TD width=5><IMG height=36
-            src="img/en/mtdr.png"
-      width=20></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5 background="ltd.gif"></TD>
-          <TD class=news vAlign=top><RR>
+  <title>Console</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../js/partial/header.js"></script>
+<p><RR>
             <p>The console is intented to switch the advanced options of Sanny Builder. Mostly they relate to the decompiler features and you can see the changes when decompile a file. The console window is called by pressing Ctrl + ~. You may write the commands and the  parameters in the edit line. After typing a command press Enter to process. The console will display a result.<br><br>
 All commands are case-insensitive.<br><br>
 The available commands are:<br><br>
