--- a/en/html/directives.html
+++ b/en/html/directives.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>Directives</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head><body>
-
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../js/partial/header.js"></script>
+<p>
 <h2>Directives</h2>
 
 <p>Preprocessing directives are the special words that make the compiler function in different ways. They are denoted with the symbol $ and located between brackets {}.</p>
