--- a/en/html/editor.html
+++ b/en/html/editor.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>Editor</title>
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<link rel="stylesheet" type="text/css" href="style/style2.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
+<script src="../js/partial/header.js"></script>
+<p>
 <h2>Editor</h2>
 <ul class='l1'>
 <li><a href="O_100.htm">Options</a>
